[FIX] 알림톡 발송 순서 보장 · 다슬롯 멤버명 전체 나열 · 입금 수집중 분철 목록 노출 (#141)
* fix: 알림톡 발송 순서 보장 · 다슬롯 멤버명 전체 나열 · 입금 수집중 분철 목록 노출

- 알림톡 전용 단일 스레드 executor 신설 — 한 트랜잭션이 발행한 이벤트들이 기본 멀티 스레드 풀에서 경합해 "진행 확정"이 "입금 확인"보다 먼저 도착하던 문제
- 발송 핸들러 13건이 전용 executor 를 지정하도록 변경하고, 새 핸들러가 기본 풀로 새면 실패하는 가드 테스트 추가
- 다슬롯 참여 알림톡의 멤버명을 "첫 멤버 외 N" 대신 전부 나열 — 금액은 합산인데 멤버명만 접혀 대조가 불가능했다. 60자를 넘으면 담기는 만큼 나열 후 접는다
- 공개 목록 rank0(모집중) 그룹에 PAYMENT_COLLECTING 합류 — 개최자가 성사를 확정하는 순간 분철이 목록·검색에서 사라졌다가 전원 입금확인 후에야 다시 나타나던 문제

* fix: 지정 없는 @Async 폴백 차단 · 단일 멤버명 접힘 회귀 · 인덱스 서술 정정

- spring.task.execution.mode=force 추가 — 전용 풀이 있으면 applicationTaskExecutor 가 등록되지 않아 지정 없는 @Async 8건이 SimpleAsyncTaskExecutor(상한 없음·드레인 제외)로 떨어지고 shutdown 설정까지 무효였다
- mergedMemberName 이 단일 참여의 긴 이름을 접기 분기에 넣어 " 외 0" 을 붙이던 회귀 수정 + 회귀 테스트
- searchRecruiting javadoc 의 "인덱스로 정렬을 커버한다" 정정 — staging MySQL EXPLAIN 실측(filesort 확인)과 수용 근거를 함께 기록
- 커서 하위호환 테스트 2건 추가 (rank0 이어받기 · rank0→rank1 경계)
- 멤버명 상한의 근거를 합산 문안 가독성으로 좁혀 서술, static 상수를 인스턴스 필드 위로 이동

* fix: 모집중 그룹 판정을 목록·헤더 카운트·찜에서 통일 · 종료 예산 재계산

- BuncheolStatus.recruitingGroup() 신설 — 아티스트 헤더 카운트가 RECRUITING 만 세어 "모집중 0개" 밑에 입금 수집중 카드가 뜨던 모순 제거
- 찜 목록의 마감 제외·정렬도 같은 집합 사용 — 홈에선 모집중, 찜에선 마감으로 갈리던 것 정합
- 종료 예산 재계산 — executor 3개(5+3+3)로 30+11=41s, stop_grace_period 45s 대비 여유 4s 확보
- 무지정 @Async 가 applicationTaskExecutor 를 쓰는지 검사하는 가드와 @Order 금지 가드 추가 (둘 다 빨개지는지 확인)
- 단일 스레드 처리량 근거를 스케줄러 배치 산식으로 교체하고 파티셔닝 전환 임계값 명시
- 멤버명 예산 상수명·주석 정정, list_rank 후속 방향이 rank0 전용임을 명시