@@ -1,5 +1,7 @@
 package buncheoleasy.notification.application;
 
+import static buncheoleasy.notification.infrastructure.AlimtalkExecutorConfig.ALIMTALK_EXECUTOR;
+
 import buncheoleasy.buncheol.application.BuncheolCancelReason;
 import buncheoleasy.buncheol.application.BuncheolCancelledEvent;
 import buncheoleasy.buncheol.application.BuncheolCollectingStartedEvent;
@@ -50,6 +52,11 @@ import org.springframework.transaction.event.TransactionalEventListener;
 @RequiredArgsConstructor
 public class AlimtalkNotificationListener {
 
+  // 멤버명 "나열" 예산. 최종 문자열 상한이 아니다 — 접힐 때 뒤에 " 외 N" 이 더 붙으므로 결과는 이 값을 조금 넘는다.
+  // 알림톡 문안의 "▶ 참여 멤버:" 한 줄이 감당할 만한 길이로 잡았다.
+  private static final int MEMBER_NAME_LIST_BUDGET = 60;
+  private static final String MEMBER_NAME_DELIMITER = ", ";
+
   private final NotificationAssembler assembler;
   private final AlimtalkSender sender;
   private final NotificationInboxRecorder inboxRecorder;
@@ -62,7 +69,7 @@ public class AlimtalkNotificationListener {
    * (참여자) 개최자가 입금을 확인함. 참여가 확정됐다. LEGACY 는 다음 관문이 최소 인원 충족이지만 C2C 는 인원이 이미 채워진 뒤라 함께 참여한 사람들의
    * 입금이 남은 조건이어서, 다음 안내 문구가 갈린다.
    */
-  @Async
+  @Async(ALIMTALK_EXECUTOR)
   @TransactionalEventListener(phase = TransactionPhase.AFTER_COMMIT, fallbackExecution = true)
   public void onPaymentConfirmed(final PaymentConfirmedEvent event) {
     ParticipationView view = assembler.loadByParticipation(event.participationId());
@@ -84,7 +91,7 @@ public class AlimtalkNotificationListener {
    * (참여자) 입금 기한이 지나 입금 만료 스케줄러가 참여를 자동 취소함. LEGACY 는 플랫폼 환불 안내, C2C 는 돈이 개최자 계좌로 가는 직거래라 문의
    * 유도 문안으로 갈린다 (docs/46 §6.2).
    */
-  @Async
+  @Async(ALIMTALK_EXECUTOR)
   @TransactionalEventListener(phase = TransactionPhase.AFTER_COMMIT, fallbackExecution = true)
   public void onPaymentExpired(final PaymentExpiredEvent event) {
     ParticipationView view = assembler.loadByParticipation(event.participationId());
@@ -105,7 +112,7 @@ public class AlimtalkNotificationListener {
    * (참여자) 참여한 분철의 진행이 확정됨 — LEGACY 는 최소 인원 충족, C2C 는 전원 입금확인이 조건이라 문안이 갈린다. C2C 1인 다슬롯에서 같은
    * 알림이 슬롯 수만큼 가지 않도록 유저 단위로 묶어 1건씩 보낸다 (성사 안내와 같은 합산 규칙).
    */
-  @Async
+  @Async(ALIMTALK_EXECUTOR)
   @TransactionalEventListener(phase = TransactionPhase.AFTER_COMMIT, fallbackExecution = true)
   public void onBuncheolConfirmed(final BuncheolConfirmedEvent event) {
     // 전이분 스냅샷을 상태 재확인 없이 그대로 쓴다 — 분철 CONFIRMED 는 종착 상태라(어느 CAS 도 CONFIRMED 에서 출발하지
@@ -114,7 +121,7 @@ public class AlimtalkNotificationListener {
         groupByParticipant(loadViewsSafely(event.participationIds())), this::sendConfirmedNotice);
   }
 
-  // 다슬롯 참여자에게는 멤버명 "호시 외 1" 로 1건만 보낸다. 금액이 없는 문안이라 합산 대상은 멤버명뿐이다.
+  // 다슬롯 참여자에게는 멤버명을 모두 나열해 1건만 보낸다. 금액이 없는 문안이라 합산 대상은 멤버명뿐이다.
   private void sendConfirmedNotice(final List<ParticipationView> group) {
     ParticipationView first = group.get(0);
     AlimtalkTemplate template =
@@ -131,7 +138,7 @@ public class AlimtalkNotificationListener {
   }
 
   /** (참여자) 참여한 분철이 취소됨(개최자 취소·미달·C2C 미성사). 문안은 {@link #cancelTemplate} 기준으로 갈린다. */
-  @Async
+  @Async(ALIMTALK_EXECUTOR)
   @TransactionalEventListener(phase = TransactionPhase.AFTER_COMMIT, fallbackExecution = true)
   public void onBuncheolCancelled(final BuncheolCancelledEvent event) {
     ParticipationView view = assembler.loadByParticipation(event.participationId());
@@ -168,7 +175,7 @@ public class AlimtalkNotificationListener {
   }
 
   /** (참여자) C2C 분철 성사 확정 — 입금 안내를 유저 단위로 합산해 1건씩 발송한다 (docs/46 §4.7-A3). */
-  @Async
+  @Async(ALIMTALK_EXECUTOR)
   @TransactionalEventListener(phase = TransactionPhase.AFTER_COMMIT, fallbackExecution = true)
   public void onBuncheolCollectingStarted(final BuncheolCollectingStartedEvent event) {
     // 커밋 시점 전이 대상 스냅샷(event.participationIds)만 발송한다 — 실행 시점 상태 재조회는 그 사이 들어온
@@ -185,7 +192,7 @@ public class AlimtalkNotificationListener {
   }
 
   /** (참여자) C2C 추가 모집 즉시입금 진입 — 이미 성사된 분철의 빈 슬롯 참여라 입금 안내를 바로 보낸다 (docs/46 §4.7-E1). */
-  @Async
+  @Async(ALIMTALK_EXECUTOR)
   @TransactionalEventListener(phase = TransactionPhase.AFTER_COMMIT, fallbackExecution = true)
   public void onParticipationCreated(final ParticipationCreatedEvent event) {
     // LEGACY 신규 참여는 알림톡 없음(현행 유지 — 계좌는 응답으로 안내, 운영 관제는 슬랙). C2C 무입금 신청(APPLIED)도 발송 없음.
@@ -205,7 +212,7 @@ public class AlimtalkNotificationListener {
   }
 
   /** (개최자) C2C 모집 정원 충족 — 분철 관리에서 진행 확정을 눌러달라고 독촉한다. 분철당 1회만 발송한다(인메모리 가드). */
-  @Async
+  @Async(ALIMTALK_EXECUTOR)
   @TransactionalEventListener(phase = TransactionPhase.AFTER_COMMIT, fallbackExecution = true)
   public void onBuncheolFull(final BuncheolFullEvent event) {
     if (!fullNotifiedBuncheolIds.add(event.buncheolId())) {
@@ -241,7 +248,7 @@ public class AlimtalkNotificationListener {
    * (개최자) C2C 참여자가 '보냈어요' 를 누름 — 통장을 확인하고 입금 확인(또는 반려)해 달라고 요청한다. 마킹(슬롯) 건당 1건이라 다슬롯 참여자는
    * 슬롯 수만큼 발송될 수 있고, 금액도 슬롯별 금액이다 — 이체 1건과의 대조는 입금자명(환불 계좌 예금주, docs/46 §4.7-A1)으로 한다.
    */
-  @Async
+  @Async(ALIMTALK_EXECUTOR)
   @TransactionalEventListener(phase = TransactionPhase.AFTER_COMMIT, fallbackExecution = true)
   public void onPaymentSent(final PaymentSentEvent event) {
     ParticipationView view = assembler.loadByParticipation(event.participationId());
@@ -263,7 +270,7 @@ public class AlimtalkNotificationListener {
   }
 
   /** (참여자) C2C 개최자가 "보냈어요" 를 반려함 — 연장된 새 기한을 담아 입금 재확인을 안내한다 (docs/46 §4.5). */
-  @Async
+  @Async(ALIMTALK_EXECUTOR)
   @TransactionalEventListener(phase = TransactionPhase.AFTER_COMMIT, fallbackExecution = true)
   public void onPaymentRecheckRequested(final PaymentRecheckRequestedEvent event) {
     ParticipationView view = assembler.loadByParticipation(event.participationId());
@@ -275,7 +282,7 @@ public class AlimtalkNotificationListener {
         view.participation().getDueAt());
   }
 
-  // 다슬롯 참여자에게는 멤버명 "호시 외 1"·금액 합산으로 1건만 보낸다. 계좌·기한은 분철의 확정 시점 스냅샷 (docs/46 §4.7-B1).
+  // 다슬롯 참여자에게는 멤버명 나열·금액 합산으로 1건만 보낸다. 계좌·기한은 분철의 확정 시점 스냅샷 (docs/46 §4.7-B1).
   private void sendFinalizedNotice(final List<ParticipationView> group) {
     ParticipationView first = group.get(0);
     long totalAmount = group.stream().mapToLong(ParticipationView::paymentAmount).sum();
@@ -332,12 +339,40 @@ public class AlimtalkNotificationListener {
         .values();
   }
 
-  // 다슬롯 참여자의 멤버명 표기 — 등록본에 슬롯 나열 자리가 없어 "첫 멤버 외 N" 으로 줄인다.
+  /**
+   * 다슬롯 참여자의 멤버명 표기 — <b>전부 나열한다</b>.
+   *
+   * <p>예전에는 "첫 멤버 외 N" 으로 줄였는데, 금액은 합산해 1건으로 보내면서 멤버명만 접으면 참여자가 그 금액이 무엇에 대한 것인지 대조할 수 없다. 특히
+   * 다슬롯은 배송비가 묶음 첫 슬롯에만 붙어 슬롯별 금액이 다르므로(docs/53 Q-22), 무엇을 신청했는지가 금액을 이해하는 유일한 단서다.
+   *
+   * <p>다만 한 사람이 가져갈 수 있는 슬롯 수에 상한이 없어, 나열이 {@value #MEMBER_NAME_LIST_BUDGET} 자를 넘으면
+   * 담기는 데까지만 나열하고 나머지는 "외 N" 으로 접는다. 이 상한의 근거는 <b>합산 문안 한 줄의 가독성</b>이지 템플릿 전체 길이 제한이
+   * 아니다 — 후자라면 단일 슬롯 경로({@code view.memberName()} 을 그대로 넘기는 곳들)까지 함께 막아야 하고, 그건
+   * {@code AlimtalkSender}/{@code AlimtalkTemplate#render} 레이어의 몫이다.
+   */
   private String mergedMemberName(final List<ParticipationView> group) {
-    ParticipationView first = group.get(0);
-    return group.size() == 1
-        ? first.memberName()
-        : first.memberName() + " 외 " + (group.size() - 1);
+    final List<String> names = group.stream().map(ParticipationView::memberName).toList();
+    // 한 명이면 예산과 무관하게 원본을 그대로 쓴다. 접기 분기에 들여보내면 담을 다음 이름이 없어 " 외 0" 이 붙는다.
+    // 합산할 게 없으니 자를 이유도 없다 — 이 예산은 여러 이름을 한 줄에 늘어놓을 때의 가독성 장치다.
+    if (names.size() == 1) {
+      return names.getFirst();
+    }
+
+    final String joined = String.join(MEMBER_NAME_DELIMITER, names);
+    if (joined.length() <= MEMBER_NAME_LIST_BUDGET) {
+      return joined;
+    }
+
+    // 상한을 넘으면 담기는 만큼만 나열한다. 첫 한 명은 길이와 무관하게 항상 이름으로 남겨 "외 N" 만 남는 문안을 막는다.
+    final StringBuilder listed = new StringBuilder(names.getFirst());
+    int listedCount = 1;
+    while (listedCount < names.size()
+        && listed.length() + MEMBER_NAME_DELIMITER.length() + names.get(listedCount).length()
+            <= MEMBER_NAME_LIST_BUDGET) {
+      listed.append(MEMBER_NAME_DELIMITER).append(names.get(listedCount));
+      listedCount++;
+    }
+    return listed + " 외 " + (names.size() - listedCount);
   }
 
   // C2C 입금 안내 계열(성사 확정·추가 모집·재확인) 공용 발송. 계좌·기한 스냅샷이 비면 오안내를 막기 위해 건너뛰고 로그만 남긴다.
@@ -370,7 +405,7 @@ public class AlimtalkNotificationListener {
   }
 
   /** (참여자) 내가 참여한 건의 운송장이 등록됨. 택배사(CU/GS25)에 따라 템플릿이 갈린다. */
-  @Async
+  @Async(ALIMTALK_EXECUTOR)
   @TransactionalEventListener(phase = TransactionPhase.AFTER_COMMIT, fallbackExecution = true)
   public void onTrackingRegistered(final TrackingRegisteredEvent event) {
     Delivery delivery = assembler.loadDelivery(event.deliveryId());
@@ -391,7 +426,7 @@ public class AlimtalkNotificationListener {
   }
 
   /** (참여자) 편의점 도착 후 기준 시간이 지나도록 미수령이라 찾아가라고 독촉함. 택배사(CU/GS25)에 따라 템플릿이 갈린다. */
-  @Async
+  @Async(ALIMTALK_EXECUTOR)
   @TransactionalEventListener(phase = TransactionPhase.AFTER_COMMIT, fallbackExecution = true)
   public void onPickupReminderDue(final PickupReminderDueEvent event) {
     Delivery delivery = assembler.loadDelivery(event.deliveryId());
@@ -413,7 +448,7 @@ public class AlimtalkNotificationListener {
   }
 
   /** (참여자) 운영진이 배송비 환급 입금을 완료함. 환급액은 신청 시점에 스냅샷된 배송비다. */
-  @Async
+  @Async(ALIMTALK_EXECUTOR)
   @TransactionalEventListener(phase = TransactionPhase.AFTER_COMMIT, fallbackExecution = true)
   public void onShippingFeePaybackCompleted(final ShippingFeePaybackCompletedEvent event) {
     ParticipationView view = assembler.loadByParticipation(event.participationId());
@@ -438,7 +473,7 @@ public class AlimtalkNotificationListener {
    * (참여자) 운영진이 배송비 환급 후기를 반려함. 사유를 보고 기한 내 재신청할 수 있다. 반려 사유는 재신청이 끼어들면 엔티티에서 지워지므로 재조회하지 않고
    * 이벤트 스냅샷을 쓴다(환급액은 재신청해도 같은 배송비 스냅샷이 다시 세팅되므로 재조회해도 안전).
    */
-  @Async
+  @Async(ALIMTALK_EXECUTOR)
   @TransactionalEventListener(phase = TransactionPhase.AFTER_COMMIT, fallbackExecution = true)
   public void onShippingFeePaybackRejected(final ShippingFeePaybackRejectedEvent event) {
     ParticipationView view = assembler.loadByParticipation(event.participationId());
